--- a/src/main/resources/templates/portal/iv/hq/parts/export/info/popup/sub_part_list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/info/popup/sub_part_list.html
@@ -19,7 +19,7 @@
 				<th th:text="#{HQP_L_PART_NO}"></th><!--Part No  -->
 				<td>
 					<div class="input-area">
-						<input type="text" id="pPartNo" name="pPartNo" class="custom-ui-btn" th:value="${pPartNo}" style="text-transform: uppercase;">
+						<input type="text" id="pPartNo" name="pPartNo" class="custom-ui-btn autocomplete" th:value="${pPartNo}" style="text-transform: uppercase;">
 					</div>
 				</td>
 			</tr>
@@ -39,7 +39,12 @@
 	
 <script>
 $(document).ready(function() {
-	_setPartAutocomplete($("#pPartNo"));
+	_setPartAutocomplete($("#pPartNo"), {
+		select: function(label, value, event)
+		{
+			doSearch();
+		}
+	});	
 });
 
 let $tableObj;
@@ -134,13 +139,6 @@ $(function(){
 $("#BTN_search").on("click", function() {
 	doSearch();
 });
-
-$("#pPartNo").on("keydown", function(event) {
-	if (event.keyCode == 13)
-	{
-		doSearch();
-	};
-});		
 
 function doSearch()
 {
