--- a/src/main/resources/templates/portal/iv/hq/parts/promotion/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/promotion/view.html
@@ -9,7 +9,7 @@
 	<script src="/editor_html5/js/xfe_main.js"></script>
 	
 	<div class="block-header">
-		<div class="block-title" th:text="프로모션"></div>
+		<div class="block-title" th:text="#{HQP_T_PROMOTION}"></div>
 		<div class="block-button-area">
 			<th:block >
 				<button id="BTN_modify" type="button" th:text="#{HQP_B_MODIFY}"></button>
