--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/applied_model_list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/applied_model_list.html
@@ -22,7 +22,7 @@
 			<th th:text="#{HQP_L_PART_NO}"></th><!--Part No.  -->
 			<td>
 				<div class="input-area">
-					<input type="text" id="pPartNo" name="pPartNo" class="custom-ui-btn" th:value="${pPartNo}" style="text-transform: uppercase;">
+					<input type="text" id="pPartNo" name="pPartNo" class="custom-ui-btn autocomplete" th:value="${pPartNo}" style="text-transform: uppercase;">
 				</div>				
 			</td>
 		</tr>
@@ -44,7 +44,12 @@
 
 <script>
 $(document).ready(function() {
-	_setPartAutocomplete($("#pPartNo"));
+	_setPartAutocomplete($("#pPartNo"), {
+		select: function(label, value, event)
+		{
+			doSearch();
+		}
+	});		
 });
 
 let $tableObj;
@@ -83,12 +88,10 @@ $("#BTN_search").on("click", function(){
 	doSearch();
 });
 
-$("#pPartNo").on("keydown", function(event) {
-	if (event.keyCode == 13)
-	{
-		doSearch();
-	};
-});
+//Input text 엔터 키 입력.
+JpUiForm.input.on.enter($("#pPartNo"), function(item) {
+	doSearch();
+});	
 
 function doSearch()
 {
