--- a/src/main/resources/templates/portal/iv/hq/parts/export/info/popup/part_search.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/info/popup/part_search.html
@@ -19,7 +19,7 @@
 				<th th:text="#{HQP_L_PART_NO}"></th><!-- Part No.  -->
 				<td>			
 					<div class="input-area">			
-						<input type="text" id="pPartNo" name="pPartNo" class="custom-ui" th:value="${pPartNo}" style="text-transform: uppercase;" autofocus />
+						<input type="text" id="pPartNo" name="pPartNo" class="custom-ui autocomplete" th:value="${pPartNo}" style="text-transform: uppercase;" autofocus />
 					</div> 										
 				</td>
 			</tr>
@@ -47,7 +47,12 @@
 	
 <script>
 $(document).ready(function() {
-	_setPartAutocomplete($("#pPartNo"));
+	_setPartAutocomplete($("#pPartNo"), {
+		select: function(label, value, event)
+		{
+			doSearch();
+		}
+	});		
 });
 
 let $tableObj;	
@@ -131,15 +136,10 @@ $("#BTN_search").on("click", function(){
 	doSearch();
 });
 
-$("#pPartNo").on("keydown", function(event) {
-	if (event.keyCode == 13)
-	{
-		if ($.trim($("#pPartNo").val()) != "")
-		{
-			doSearch();	
-		};
-	};
-});
+//Input text 엔터 키 입력.
+JpUiForm.input.on.enter($("#FORM_search input:text"), function(item) {
+	doSearch();
+});	
 
 function doSearch()
 {
