--- a/src/main/resources/templates/portal/iv/hq/parts/export/order/status/summary/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/order/status/summary/list.html
@@ -40,7 +40,7 @@
 				<th th:text="#{HQP_L_ORDER_PART_NO}"></th>
 				<td>
 					<div class="input-area">
-						<input type="text" id="pOrderPartNo" name="pOrderPartNo" class="custom-ui" th:value="${pOrderPartNo}">
+						<input type="text" id="pOrderPartNo" name="pOrderPartNo" class="custom-ui autocomplete" th:value="${pOrderPartNo}">
 					</div>
 				</td>
 			</tr>		
@@ -73,7 +73,12 @@
 	<iframe id="IFM_download" name="IFM_download" style="display:none;"></iframe>
 <script>
 $(document).ready(function() {
-	_setPartAutocomplete($("#pOrderPartNo"));
+	_setPartAutocomplete($("#pOrderPartNo"), {
+		select: function(label, value, event)
+		{
+			doSearch();
+		}
+	});	
 });
 
 let $tableObj;
@@ -140,13 +145,10 @@ $("#BTN_search").on("click", function(){
 	doSearch(); 
 });
 
-//Input text 엔터 키 입력
-$("#FORM_search input:text").on("keydown", function(event) {
-	if (event.keyCode == 13)
-	{
-		doSearch();
-	};
-});
+//Input text 엔터 키 입력.
+JpUiForm.input.on.enter($("#FORM_search input:text"), function(item) {
+	doSearch();
+});	
 
 function doSearch()
 {
